[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Yasat"
version = "0.0.1"
description = '(Undergraduate Capstone Project) Yasat - Yet Another Static Analysis Tool to detect cryptographic API misuses in firmware'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "bluesadi", email = "yiboliucs@gmail.com" },
]
dependencies = [
  "angr==9.2.46",
  "filetype==1.2.0",
  "PyYAML==6.0"
]

[project.scripts]
yasat = "Yasat.main_cli:main_cli"
yasat-dev = "Yasat.main_dev:main_dev"
yasat-example = "Yasat.example:example"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = "ignore::DeprecationWarning"